--- a/style.css
+++ b/style.css
@@ -32,11 +32,13 @@ body {
   background-color: #e02c6d;
   color: white;
   padding: 10px 40px;
+  box-shadow: 0 0 20px #e02c6e3b;
 }
 
 .title a:hover {
   background-color: #3dbafd;
   transition: 1s;
+  box-shadow: 0 0 20px #3dbafda6;
 }
 
 .title i {
@@ -98,6 +100,11 @@ body {
   padding: 15px;
   background: white;
   box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.151);
+}
+
+.player:hover {
+  box-shadow: 0px 0px 20px #2d25a0a4;
+  transition: 1s;
 }
 
 /* optional banner style */
