--- a/style.css
+++ b/style.css
@@ -249,7 +249,9 @@ footer {
   .optional-match {
     margin-top: 15%;
   }
-
+  .title h1 {
+    font-size: 2.5em;
+  }
   .top-player {
     width: 110%;
     margin-left: -5%;
@@ -282,8 +284,12 @@ footer {
     grid-template-columns: repeat(1, 1fr);
   }
 
-  .top-banner .title {
-    font-size: 3em;
+  .title h1 {
+    font-size: 5em;
+  }
+
+  .title a {
+    font-size: 2.5em;
   }
 
   .middle-players,
